@@ -1,5 +1,10 @@
 2007-06-27  Christian Neumair  <cneumair@gnome.org>
 
+	* freedesktop.org.xml.in: Add JAD MIME type. Fixes #10869.
+	Thanks to Ville Skyttä <ville.skytta@iki.fi>.
+
+2007-06-27  Christian Neumair  <cneumair@gnome.org>
+
 	* freedesktop.org.xml.in: Add WMLScript MIME type. Fixes #10868.
 	Thanks to Ville Skyttä <ville.skytta@iki.fi>.
 
